Fix callout actions too small in Safari

--- a/app/javascript/mastodon/components/callout/styles.module.css
+++ b/app/javascript/mastodon/components/callout/styles.module.css
@@ -62,6 +62,7 @@
   background: none;
   border: none;
   color: inherit;
+  font: inherit;
   font-weight: 500;
   padding: 0;
   text-wrap: nowrap;
